@@ -1,9 +1,14 @@
-2002-09-23  Jochen Wiedmann  <joe@ispsoft.de> (0.2020)
+2002-11-18  Jochen Wiedmann  <joe@ispsoft.de> (2.1021)
+
+	* lib/Mysql.pm (errno): Added handling for non-ref
+	  arguments. Raphael Hertzog <rhertzog@hrnet.fr>
+
+2002-09-23  Jochen Wiedmann  <joe@ispsoft.de> (2.1020)
 
 	* Added mysql_local_infile option. (Paul DuBois,
 	  paul@snake.net)
 
-2002-09-16  Jochen Wiedmann  <joe@ispsoft.de> (0.2019)
+2002-09-16  Jochen Wiedmann  <joe@ispsoft.de> (2.1019)
 
 	* Added hints to installing DBD::mysql with PPM 3.
 	  (Stefan Prehn, stefanprehngmx.de)
